--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,7 +28,10 @@
     <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/3b39944aa3.js" crossorigin="anonymous"></script>
+    <script 
+    src="https://www.paypal.com/sdk/js?client-id=AUdbfarA_W4PxQrRyVlWBCb44N0uAo5QggOfKIgtjLum8zGUotYwu1SZQM9qlWHCZSvYghYJGyqtX1K-
+    "></script>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@523&family=Rajdhani&display=swap">  
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
